--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ ext {
     lifecycleVersion = '2.3.1'
     materialVersion = '1.4.0'
     roomVersion = '2.3.0'
+    navigation = '2.3.5'
     // testing
     junitVersion = '4.13.2'
     espressoVersion = '3.1.0'
