--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
     materialVersion = '1.4.0'
     roomVersion = '2.3.0'
     navigation = '2.3.5'
+    preference = '1.1.1'
     // testing
     junitVersion = '4.13.2'
     espressoVersion = '3.1.0'
